Ticket #29443: Add class to preserve whitespace to prevent widows

--- a/website/static/website/css/style.css
+++ b/website/static/website/css/style.css
@@ -4960,6 +4960,9 @@ blockquote.testimonial--quote {
       display: inline-block;
       width: 360px; } }
 
+.widow-prevention {
+  white-space: nowrap; }
+
 .work-projects {
   background-color: #f5f7f8;
   border-top: 1px solid #d1d8dd;
